package com.rusudinu.wad_lab6.first.dto;

public record AuthorDto(Long id, String name, String country) {
}
