package com.rusudinu.wad_lab6.first.dto;

public record GenreDto(Long id, String name, String description) {
}
