package com.rusudinu.wad_lab6.search.dto;

public record CategoryDto(Long id, String name, String description) {
}
