package com.rusudinu.wad_lab6.search.dto;

public record ManufacturerDto(Long id, String name, String country) {
}
