package com.rusudinu.wad_lab6.search.dto;

public record TagDto(Long id, String name) {
}
