@startuml

package "Stage 1 — Postgres (Books)" {

  class Book {
    +Long id
    +String title
    +String description
    +Integer publicationYear
    +LocalDateTime createdAt
  }

  class Author {
    +Long id
    +String name
    +String country
  }

  class Genre {
    +Long id
    +String name
    +String description
  }

  Author "1" -- "0..*" Book : writes
  Genre "1" -- "0..*" Book : categorizes
}

package "Stage 2 — Elasticsearch (Products)" {

  class Product {
    +String id
    +String title
    +String description
    +BigDecimal price
    +LocalDateTime createdAt
  }

  class Category {
    +String name
    +String description
  }

  class Manufacturer {
    +String name
    +String country
  }

  class Tag {
    +String name
  }

  class Review {
    +String reviewerName
    +Integer rating
    +String comment
  }

  Category "1" -- "0..*" Product : categorizes
  Manufacturer "1" -- "0..*" Product : produces
  Product "1" -- "0..*" Review : has
  Product "0..*" -- "0..*" Tag : labeled with
}

@enduml
